<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cheese"
    android:orientation="vertical">

    <include
        android:id="@+id/include_record_title"
        layout="@layout/hero_record_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pixel"
                android:text="@string/today_record" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart_today_record"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pixel"
                android:text="@string/weekly_record" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart_weekly_record"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixel"
            android:text="@string/weekly_coin_record" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_seven_day_record"
            android:layout_width="match_parent"
            android:layout_height="300dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pixel"
                android:text="@string/quest_record" />
            <TextView
                android:id="@+id/tv_quest_information"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10dp"
                android:fontFamily="@font/pixel" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>