<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/package_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="5dp">
    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->
    <!--        <TextView-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="40dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:text="@string/adventurer_package"-->
    <!--            android:gravity="center"-->
    <!--            android:fontFamily="@font/pixel"-->
    <!--            android:textColor="@color/tiffyBlue"-->
    <!--            android:textSize="25sp" />-->
    <!--        <ImageView-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="40dp"-->
    <!--            android:layout_weight="0.5"-->
    <!--            android:src="@drawable/package_1" />-->
    <!--    </LinearLayout>-->

    <!--横线-->
    <View
        android:layout_height="3dp"
        android:layout_width="match_parent"
        android:background="@color/kleinBlue" />

    <!--背包部分-->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <!--个人信息页面135dp-->
        <LinearLayout
            android:id="@+id/package_information"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/package_information_detail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/person_information" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pixel"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/adventurer_information" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/package_account"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/home_account" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pixel"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/adventurer_account" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/package_settings"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pixel"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/equipment_settings" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/package_achievement"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/package_achievement_detail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/champion" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pixel"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/adventurer_achievement" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/package_date"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_hero_record"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pixel"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/adventurer_date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/package_like"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/profile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pixel"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/adventurer_like" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/package_notes"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="2"
            android:layout_column="0"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/notes" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pixel"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/adventurer_note" />
        </LinearLayout>

    </GridLayout>

    <!--横线-->
    <View
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@color/kleinBlue" />

</LinearLayout>