<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:background="@drawable/radius_drawable_bg"
        android:orientation="vertical"
        android:padding="10dip">

        <LinearLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/phone"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:background="@color/white"
                android:hint="@string/phone_id"
                android:padding="5dip"
                android:textSize="16sp"
                android:layout_weight="9" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:background="#eeeeee" />

        <LinearLayout
            android:id="@+id/input_layout_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_paw"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/verify_code"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:background="@color/white"
                android:hint="@string/verify_code"
                android:inputType="textPassword"
                android:padding="5dip"
                android:textSize="16sp"
                android:layout_weight="5" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginEnd="20dip"
                android:minHeight="1dp"
                android:text="发送验证码"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="10dp">

            <CheckBox
                android:id="@+id/ckb_remember_paw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_forget_paw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_paw"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/pineFlowerYellow">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@drawable/text_bg"
            android:gravity="center"
            android:paddingLeft="15dip"
            android:paddingTop="2dip"
            android:clickable="true"
            android:paddingRight="15dip"
            android:paddingBottom="2dip"
            android:fontFamily="@font/pixel"
            android:text="@string/login_name"
            android:textColor="@color/cheese"
            android:textSize="20sp" />
    </RelativeLayout>
</LinearLayout>